<resources>
    <string name="app_name">P03 Class Journal</string>
    <string name="info">info</string>
    <string name="add">add</string>
    <string name="email">email faci</string>
    <string name="dg">DG</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="x">X</string>
    <string name="submit">submit</string>
</resources>
